--- a/BookListRazor/Pages/BookList/Index.cshtml
+++ b/BookListRazor/Pages/BookList/Index.cshtml
@@ -14,6 +14,16 @@
         </div>
     </div>
 
+@if(Model.Message != null)
+{
+    <div class="alert alert-info alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aira-label="close">
+            <span aria--hidden="true">&times;</span>
+        </button>
+        @Model.Message
+    </div>
+}
+
     <form method="post">
 
         @if (Model.Books.Count() > 0)
